[metadata]
name = dpaste
version = attr: dpaste.__version__
description = A Django based pastebin for text and code.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/dpaste
keywords = django, pastebin
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.4
install_requires =
    # Essential packages
    six
    django>=1.11
    pygments>=1.6
    django-staticinline>=1.0
    django-csp>=3.3

    # Additional Text Lexer
    misaka>=2.1.0
    docutils

    # Testsuite
    tox
    coverage

[isort]
known_first_party = dpaste
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = dpaste
branch = True
omit =
    dpaste/migrations/*
    dpaste/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/dpaste
