[metadata]
name = dpaste
version = attr: dpaste.__version__
description = A Django based pastebin for text and code.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
author = 'Martin Mahner, Darren Nathanael'
author_email = 'martin@mahner.org, git@darrennathanael.com'
url = https://github.com/DarrenOfficial/dpaste
keywords = django, pastebin
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =
    # Essential packages
    django>=3.2
    pygments>=2.11
    django-staticinline>=1.0
    django-csp>=3.6
    dj_database_url>=0.5.0
    ratelimiter>=1.2

    # Additional Lexer
    jsx-lexer>=0.0.8
    misaka>=2.1.0
    docutils

    # Testsuite
    tox
    pytest
    pytest-cov
    pytest-django

# Extra packages for local development
[options.extras_require]
production =
    psycopg2-binary==2.9.3
    django-webserver[pyuwsgi]==1.2.0

dev =
    ipdb
    isort
    black
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    sphinx_press_theme
    sphinxcontrib-httpdomain
    django-sslserver

[options.packages.find]
where = .
exclude =
    dpaste/settings/local.py

[isort]
known_first_party = dpaste
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[coverage:run]
source = dpaste
branch = True
omit =
    dpaste/migrations/*
    dpaste/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/dpaste

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
addopts =
    --ds=dpaste.settings.tests
    --cov=./dpaste
    --cov-append
    --cov-branch
    --nomigrations
    --reuse-db
